<resources>
    <string name="app_name">Task Helper</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_task">Add task</string>

    <string name="et_body_hint">Enter a description</string>
    <string name="btn_add_task">Add task</string>
    <string name="btn_edit_task">Save task</string>
    <string name="radio_low">Low</string>
    <string name="radio_medium">Medium</string>
    <string name="radio_high">High</string>

    <string name="fragment_add_task">Add task</string>
    <string name="fragment_edit_task">Edit task</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_sortingOrder">Sort order</string>
    <string name="pref_sortingOrderDefault">descending</string>
</resources>
