<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_add_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="12dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_body"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:maxLength="30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_body_hint"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_task"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onAddItem"/>

    <RadioGroup
        android:id="@+id/radiogroup_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_body">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_low"
            android:id="@+id/radio_low"
            android:buttonTint="@color/colorPriorityLow"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_medium"
            android:id="@+id/radio_medium"
            android:buttonTint="@color/colorPriorityMedium"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_high"
            android:id="@+id/radio_high"
            android:buttonTint="@color/colorPriorityHigh"
            android:checked="false" />

    </RadioGroup>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:id="@+id/dp_date"
        android:layout_below="@+id/radiogroup_priority"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
